added meta tags

--- a/index.html
+++ b/index.html
@@ -4,18 +4,52 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Tracy</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="shortcut icon" type="image/x-icon" href="img/bubble.ico">
+  <link rel="canonical" href="http://bubblepost.be/bedrijven/">
+  <!-- Meta tags for Tracy -->
+  <link rel="canonical" href="http://bubblepost.be/bedrijven/">
+  <meta property="og:site_name" content="Bubble Post">
+  <meta property="og:title" content="Bedrijven">
+  <meta property="og:url" content="http://bubblepost.be/bedrijven/">
+  <meta property="og:type" content="website">
+  <meta property="og:description" content="Verstuur uw leveringen vandaag nog met onze kleine, snelle en ecologische
+voertuigen.">
+  <meta itemprop="name" content="Bedrijven">
+  <meta itemprop="url" content="http://bubblepost.be/bedrijven/">
+  <meta itemprop="description" content="Verstuur uw leveringen vandaag nog met onze kleine, snelle en ecologische
+voertuigen.">
+  <meta name="twitter:title" content="Bedrijven">
+  <meta name="twitter:url" content="http://bubblepost.be/bedrijven/">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:description" content="Verstuur uw leveringen vandaag nog met onze kleine, snelle en ecologische
+voertuigen.">
+  <meta name="description" content="Verstuur uw leveringen vandaag nog met onze kleine, snelle en ecologische
+voertuigen.">
+  <title>Track and Trace Bubblepost</title>
   <!-- CSS for Tracy -->
   <link rel="stylesheet" href="dist/min/tracy.min.css">
   <!-- Typekit for Tracy -->
   <script src="https://use.typekit.net/yze7tdh.js"></script>
   <script>try{Typekit.load({ async: true });}catch(e){}</script>
+  <!-- Bugsnag for Tracy -->
+  <script src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-2.min.js" data-apikey="c80e974b8f35aaf763f7ef8d365e5db8"></script>
+  <!-- Google Analytics for Tracy -->
+  <script>
+     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+     })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+     ga('create', 'UA-46128392-1', 'auto');
+     ga('send', 'pageview');
+  </script>
 </head>
 
 <body id="tracy-body">
   <!-- HTLM for tracy -->
   <div id="tracy-container" data-url="http://app.bubblepost.be/" data-phone="+32 9 234 17 71"
-  data-background="img/bubble-background.jpg" data-logo="img/bubble.png" data-language="fr"></div>
+  data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div>
   <!-- Include Jquery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include Tracy -->
