--- a/index.html
+++ b/index.html
@@ -8,25 +8,25 @@
   <link rel="shortcut icon" type="image/x-icon" href="img/bubble.ico">
   <link rel="canonical" href="http://bubblepost.be/bedrijven/">
   <!-- Meta tags for Tracy -->
-  <link rel="canonical" href="http://bubblepost.be/bedrijven/">
-  <meta property="og:site_name" content="Bubble Post">
-  <meta property="og:title" content="Bedrijven">
-  <meta property="og:url" content="http://bubblepost.be/bedrijven/">
+  <link rel="canonical" href="http://trackandtrace.bubblepost.be">
+  <meta property="og:site_name" content="Bubble Post Track and Trace">
+  <meta property="og:title" content="Track and Trace">
+  <meta property="og:url" content="http://trackandtrace.bubblepost.be">
   <meta property="og:type" content="website">
   <meta property="og:description" content="Verstuur uw leveringen vandaag nog met onze kleine, snelle en ecologische
 voertuigen.">
-  <meta itemprop="name" content="Bedrijven">
-  <meta itemprop="url" content="http://bubblepost.be/bedrijven/">
+  <meta itemprop="name" content="Track and Trace">
+  <meta itemprop="url" content="http://trackandtrace.bubblepost.be">
   <meta itemprop="description" content="Verstuur uw leveringen vandaag nog met onze kleine, snelle en ecologische
 voertuigen.">
-  <meta name="twitter:title" content="Bedrijven">
+  <meta name="twitter:title" content="Track and Trace">
   <meta name="twitter:url" content="http://bubblepost.be/bedrijven/">
   <meta name="twitter:card" content="summary">
   <meta name="twitter:description" content="Verstuur uw leveringen vandaag nog met onze kleine, snelle en ecologische
 voertuigen.">
   <meta name="description" content="Verstuur uw leveringen vandaag nog met onze kleine, snelle en ecologische
 voertuigen.">
-  <title>Track and Trace Bubblepost</title>
+  <title>Bubble Post - Track and Trace </title>
   <!-- CSS for Tracy -->
   <link rel="stylesheet" href="dist/min/tracy.min.css">
   <!-- Typekit for Tracy -->
