--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@ voertuigen.">
 <body id="tracy-body">
   <!-- HTLM for tracy -->
   <div id="tracy-container" data-url="http://app.bubblepost.be/" data-phone="+32 9 234 17 71"
-  data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div <!-- Include Jquery -->
+  data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div>
+  <!-- Include Jquery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include Tracy -->
   <script src="dist/min/tracy.min.js" onload="tracy.init()"></script>
