--- a/index.html
+++ b/index.html
@@ -52,6 +52,11 @@ voertuigen.">
       position: absolute;
       top: 0px;
       width: 100%;
+      z-index: 1000;
+      font-family: "proxima-nova", sans-serif;
+    }
+    #tracy-container {
+      margin-top: 100px !important;
     }
   </style>
 </head>
