--- a/index.html
+++ b/index.html
@@ -51,12 +51,17 @@ voertuigen.">
       text-align: center;
       position: absolute;
       top: 0px;
+      left: 0px;
       width: 100%;
       z-index: 1000;
       font-family: "proxima-nova", sans-serif;
     }
     #tracy-container {
-      margin-top: 100px !important;
+      margin-top: 80px !important;
+    }
+
+    #tracy-container .tracy-language-box {
+      top: 80px;
     }
   </style>
 </head>
