--- a/index.html
+++ b/index.html
@@ -67,9 +67,7 @@ voertuigen.">
 </head>
 
 <body id="tracy-body">
-  <div class="warning">
-    <p>Due to a terror alert level 4 our Heroes are unable to deliver packages today in Brussels. Sorry for this inconvenience. For more info, feel free to call us.</p>
-  </div>
+  <!-- <div class="warning"><p></p></div> -->
   <!-- HTLM for tracy -->
   <div id="tracy-container" data-url="https://app.bubblepost.be/" data-phone="+32 9 298 06 01" data-olark-id="3921-121-10-6247"
   data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div>
