feat(random-images): added random images script

--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@ voertuigen.">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Include Tracy -->
   <script src="dist/min/tracy.min.js" onload="tracy.init()"></script>
+  <!-- Image Slider -->
+  <script src="dist/src/slider.js"></script>
 </body>
 
 </html>
