fix(random-images): removed zip and svg’s

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="x-ua-compatible" content="ie=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="shortcut icon" type="image/x-icon" href="img/bubble.ico">
-  <link rel="canonical" href="http://bubblepost.be/bedrijven/">
+  <link rel="canonical" href="http://bubblepost.be/besdrijven/">
   <!-- Meta tags for Tracy -->
   <link rel="canonical" href="http://trackandtrace.bubblepost.be">
   <meta property="og:site_name" content="Bubble Post Track and Trace">
