fix(bubble-video): fix css overlay search

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@ voertuigen.">
       <li class="red-border"></li>
     </ul>
   </div>
+
   <!-- Include Jquery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Video -->
@@ -129,6 +130,7 @@ voertuigen.">
   <!-- Image Slider -->
   <script src="dist/src/js/image.js"></script>
   <script type="text/javascript">
+    // Fix height video
     $('.wistia_responsive_wrapper').css('height', ($('.wistia_responsive_wrapper').width() / 1.8));
   </script>
 </body>
