refactor(refator-tracy): mobile version tracy

--- a/index.html
+++ b/index.html
@@ -63,17 +63,14 @@ voertuigen.">
 
 <body id="tracy-body">
   <!-- <div class="warning"><p></p></div> -->
-  <!-- HTLM for tracy -->
-  <div id="tracy-container" data-url="https://app.bubblepost.be/" data-phone="+32 9 298 06 01" data-olark-id="3921-121-10-6247"
-  data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div>
 
-  <div id="video-container">
+  <!--<div id="video-container">
     <div class="wistia_responsive_padding">
       <div class="wistia_responsive_wrapper">
         <iframe src="http://fast.wistia.net/embed/iframe/q50jmxymbd?videoFoam=true" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen width="100%" height="100%"></iframe>
       </div>
     </div>
-  </div>
+  </div>-->
 
   <div id="social-container">
     <ul>
@@ -121,6 +118,10 @@ voertuigen.">
     </ul>
   </div>
 
+  <!-- HTLM for tracy -->
+  <div id="tracy-container" data-url="https://app.bubblepost.be/" data-phone="+32 9 298 06 01" data-olark-id="3921-121-10-6247"
+  data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div>
+
   <!-- Include Jquery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Video -->
@@ -128,11 +129,11 @@ voertuigen.">
   <!-- Include Tracy -->
   <script src="dist/min/tracy.min.js" onload="tracy.init()"></script>
   <!-- Image Slider -->
-  <script src="dist/src/js/image.js"></script>
+  <!--<script src="dist/src/js/image.js"></script>
   <script type="text/javascript">
     // Fix height video
     $('.wistia_responsive_wrapper').css('height', ($('.wistia_responsive_wrapper').width() / 1.8));
-  </script>
+  </script>-->
 </body>
 
 </html>
