update(refactor-tracy): update tracy.min.js

--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@ voertuigen.">
   <title>Bubble Post - Track and Trace </title>
   <!-- CSS for Tracy -->
   <link rel="stylesheet" href="dist/min/tracy.min.css">
-  <link rel="stylesheet" href="dist/src/css/social.css">
-  <link rel="stylesheet" href="dist/src/css/video.css">
+  <link rel="stylesheet" href="dist/src/css/screen.css">
   <!-- Typekit for Tracy -->
   <script src="https://use.typekit.net/yze7tdh.js"></script>
   <script>
