--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="canonical" href="http://bubblepost.be/besdrijven/">
   <!-- Meta tags for Tracy -->
   <link rel="canonical" href="http://trackandtrace.bubblepost.be">
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <meta property="og:site_name" content="Bubble Post Track and Trace">
   <meta property="og:title" content="Track and Trace">
   <meta property="og:url" content="http://trackandtrace.bubblepost.be">
@@ -63,15 +64,12 @@ voertuigen.">
 <body id="tracy-body">
   <!-- <div class="warning"><p></p></div> -->
 
-  <!--<div id="video-container">
-    <div class="wistia_responsive_padding">
-      <div class="wistia_responsive_wrapper">
-        <iframe src="http://fast.wistia.net/embed/iframe/q50jmxymbd?videoFoam=true" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen width="100%" height="100%"></iframe>
-      </div>
-    </div>
-  </div>-->
-
   <div id="social-container">
+    <div class="arrow_box">
+      <p>
+        Watch our Bubble Movie!
+      </p>
+    </div>
     <ul>
       <li class="social-icon">
         <a href="https://www.facebook.com/BubblePost/" target="_blank">
@@ -130,6 +128,14 @@ voertuigen.">
   <!-- HTLM for tracy -->
   <div id="tracy-container" data-url="https://app.bubblepost.be/" data-phone="+32 9 298 06 01" data-olark-id="3921-121-10-6247" data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div>
 
+  <!--<div id="video-container">
+    <div class="wistia_responsive_padding">
+      <div class="wistia_responsive_wrapper">
+        <iframe src="http://fast.wistia.net/embed/iframe/q50jmxymbd?videoFoam=true" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen width="100%" height="100%"></iframe>
+      </div>
+    </div>
+  </div>-->
+
   <!-- Include Jquery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
   <!-- Video -->
@@ -137,10 +143,13 @@ voertuigen.">
   <!-- Include Tracy -->
   <script src="dist/min/tracy.min.js" onload="tracy.init()"></script>
   <!-- Image Slider -->
-  <!--<script src="dist/src/js/image.js"></script>
-  <script type="text/javascript">
+  <script src="dist/src/js/image.js"></script>
+  <!--<script type="text/javascript">
     // Fix height video
-    $('.wistia_responsive_wrapper').css('height', ($('.wistia_responsive_wrapper').width() / 1.8));
+    var width = $(document).width() - ($('#tracy-container').width() + 90);
+    var height = width / 1.8;
+    $('.wistia_responsive_wrapper').css('width', width);
+    $('.wistia_responsive_wrapper').css('height', height);
   </script>-->
 </body>
 
