--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@ voertuigen.">
   <!-- CSS for Tracy -->
   <link rel="stylesheet" href="dist/min/tracy.min.css">
   <link rel="stylesheet" href="dist/src/css/screen.css">
+  <link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.css">
   <!-- Typekit for Tracy -->
   <script src="https://use.typekit.net/yze7tdh.js"></script>
   <script>
@@ -64,13 +65,32 @@ voertuigen.">
 <body id="tracy-body">
   <!-- <div class="warning"><p></p></div> -->
 
+  <!-- HTLM for tracy -->
+  <div id="tracy-container" data-url="https://app.bubblepost.be/" data-phone="+32 9 298 06 01" data-olark-id="3921-121-10-6247" data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div>
+
   <div id="social-container">
-    <div class="arrow_box">
-      <p>
-        Watch our Bubble Movie!
-      </p>
-    </div>
+    <a href="video-container" class="open-modal" name="modal">
+      <div class="arrow_box">
+        <p>
+          Watch our Bubble Movie!
+        </p>
+      </div>
+    </a>
     <ul>
+      <li class="social-icon">
+        <a href="video-container" class="open-modal" name="modal">
+          <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" viewBox="0 0 925.133 925.133" style="enable-background:new 0 0 925.133 925.133;" xml:space="preserve" width="17px" height="17px">
+            <g>
+              <path d="M721.246,711.395h62.878l0,0c27.894,47.355,78.753,76.424,133.713,76.424h7.295V519.813h-7.295   c-54.959,0-105.819,29.069-133.713,76.423v0h-62.878V711.395z" fill="#FFFFFF" />
+              <rect x="44.771" y="423.44" width="641.475" height="460.751" fill="#FFFFFF" />
+              <path d="M543.73,388.325c8.501,0.666,16.989,0.715,25.319,0.115c90.173-6.488,161.316-81.691,161.316-173.519   c0-96.087-77.894-173.98-173.98-173.98c-90.98,0-165.636,69.838-173.316,158.827c-0.87,10.082-0.869,20.225,0,30.306   c4.88,56.6,38.227,108.27,87.616,136.282C492.505,378.732,518.173,386.322,543.73,388.325z M556.385,139.662   c41.565,0,75.26,33.695,75.26,75.26s-33.695,75.26-75.26,75.26c-41.565,0-75.26-33.695-75.26-75.26S514.82,139.662,556.385,139.662   z"
+                fill="#FFFFFF" />
+              <path d="M161.314,388.325c8.501,0.666,16.989,0.715,25.319,0.115c90.173-6.488,161.316-81.691,161.316-173.519   c0-96.087-77.894-173.98-173.98-173.98c-90.98,0-165.636,69.838-173.316,158.827c-0.87,10.082-0.869,20.225,0,30.306   c4.88,56.6,38.227,108.27,87.616,136.282C110.089,378.732,135.757,386.322,161.314,388.325z M173.969,139.662   c41.565,0,75.26,33.695,75.26,75.26s-33.695,75.26-75.26,75.26c-41.565,0-75.26-33.695-75.26-75.26   S132.404,139.662,173.969,139.662z"
+                fill="#FFFFFF" />
+            </g>
+          </svg>
+        </a>
+      </li>
       <li class="social-icon">
         <a href="https://www.facebook.com/BubblePost/" target="_blank">
           <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="17px" height="17px" viewBox="0 0 430.113 430.114" style="enable-background:new 0 0 430.113 430.114;" xml:space="preserve">
@@ -125,32 +145,36 @@ voertuigen.">
     </ul>
   </div>
 
-  <!-- HTLM for tracy -->
-  <div id="tracy-container" data-url="https://app.bubblepost.be/" data-phone="+32 9 298 06 01" data-olark-id="3921-121-10-6247" data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div>
-
-  <!--<div id="video-container">
-    <div class="wistia_responsive_padding">
-      <div class="wistia_responsive_wrapper">
-        <iframe src="http://fast.wistia.net/embed/iframe/q50jmxymbd?videoFoam=true" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen width="100%" height="100%"></iframe>
+  <div id="video-container" class="modal" draggable="true">
+    <h4>Bubble Movie
+      <a href="#" class="close-modal">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" id="Capa_1" x="0px" y="0px" width="12px" height="12px" viewBox="0 0 31.816 31.816" style="enable-background:new 0 0 31.816 31.816;" xml:space="preserve">
+        <g>
+        	<path d="M30.922,9.343c0.562-0.525,0.885-1.259,0.895-2.028c0.008-0.77-0.301-1.51-0.852-2.048L27.143,1.53   c-0.535-0.523-1.256-0.812-2.006-0.803c-0.748,0.009-1.461,0.314-1.982,0.85l-7.197,7.377L8.862,1.562   C8.303,0.979,7.537,0.643,6.73,0.627C5.923,0.61,5.142,0.916,4.561,1.475l-3.695,3.55C0.31,5.558-0.002,6.294,0,7.065   c0.002,0.77,0.318,1.505,0.876,2.036l7.746,7.368l-6.858,7.028c-1.046,1.071-1.071,2.774-0.058,3.879l2.67,2.901   c0.509,0.556,1.218,0.881,1.97,0.909c0.751,0.028,1.483-0.244,2.032-0.759l7.522-7.035l7.339,6.98   c0.545,0.519,1.272,0.797,2.024,0.772c0.752-0.021,1.463-0.344,1.979-0.895l2.691-2.877c1.022-1.097,1.014-2.8-0.023-3.88   l-6.68-6.964L30.922,9.343z" fill="#FFFFFF"/>
+        </g>
+        </svg>
+      </a>
+    </h4>
+    <div class="content-modal">
+      <div class="wistia_responsive_padding">
+        <div class="wistia_responsive_wrapper">
+          <iframe src="http://fast.wistia.net/embed/iframe/q50jmxymbd?videoFoam=true" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen
+            width="100%" height="100%"></iframe>
+        </div>
       </div>
     </div>
-  </div>-->
+  </div>
 
   <!-- Include Jquery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/jquery-ui.min.js"></script>
   <!-- Video -->
   <script src="//fast.wistia.net/assets/external/E-v1.js" async></script>
   <!-- Include Tracy -->
   <script src="dist/min/tracy.min.js" onload="tracy.init()"></script>
-  <!-- Image Slider -->
+  <!-- Load scripts -->
   <script src="dist/src/js/image.js"></script>
-  <!--<script type="text/javascript">
-    // Fix height video
-    var width = $(document).width() - ($('#tracy-container').width() + 90);
-    var height = width / 1.8;
-    $('.wistia_responsive_wrapper').css('width', width);
-    $('.wistia_responsive_wrapper').css('height', height);
-  </script>-->
+  <script src="dist/src/js/modal.js"></script>
 </body>
 
 </html>
