--- a/index.html
+++ b/index.html
@@ -81,9 +81,9 @@ voertuigen.">
 </head>
 
 <body id="tracy-body">
- <div class="warning">
+<!--   <div class="warning">
     <p>We are having some technical issues with our phone and internet connection, sorry for the inconvenience. We'll be right back!</p>
-  </div>
+  </div> -->
 
   <!-- HTLM for tracy -->
   <div id="tracy-container" data-url="https://app.bubblepost.be/" data-phone="+32 9 298 06 01" data-olark-id="3921-121-10-6247" data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div>
