--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@ voertuigen.">
   </div> -->
 
   <!-- HTLM for tracy -->
-  <div id="tracy-container" data-url="https://app.bubblepost.be/" data-phone="+32 9 298 06 01" data-olark-id="3921-121-10-6247" data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div>
+  <div id="tracy-container" data-url="https://app.bubblepost.be/" data-phone="+32 9 298 06 01" data-groove-hq="true" data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div>
 
   <div id="social-container">
     <a href="video-container" class="open-modal" name="modal">
