Set fill to white

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ voertuigen.">
            width="17px" height="17px" viewBox="0 0 1417.000000 1417.000000"
            preserveAspectRatio="xMidYMid meet">
           <g transform="translate(0.000000,1417.000000) scale(0.100000,-0.100000)"
-          fill="#000000" stroke="none">
+          fill="#ffffff" stroke="none">
           <path d="M9047 12793 c-9 -2 -864 -217 -1900 -477 -1268 -319 -1902 -482
           -1942 -501 -38 -18 -85 -53 -126 -94 -103 -103 -150 -214 -150 -356 0 -73 67
           -349 725 -2985 398 -1598 757 -3035 796 -3195 80 -319 111 -400 185 -483 55
