--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ voertuigen.">
     } catch (e) {}
   </script>
   <style>
-   /* #tracy-container, #social-container {
+    #tracy-container, #social-container {
       margin-top: 70px;
     }
     .warning {
@@ -56,7 +56,7 @@ voertuigen.">
     }
     div#tracy-container div.tracy-language-box {
       top: 78px;
-    }*/
+    }
   </style>
 
   <!-- Bugsnag for Tracy -->
@@ -81,9 +81,9 @@ voertuigen.">
 </head>
 
 <body id="tracy-body">
-<!--   <div class="warning">
-    <p>We are having some technical issues with our phone and internet connection, sorry for the inconvenience. We'll be right back!</p>
-  </div> -->
+  <div class="warning">
+    <p>We might have delays due to the strike of 29/09 in Brussels, our apologies.</p>
+  </div>
 
   <!-- HTLM for tracy -->
   <div id="tracy-container" data-url="https://app.bubblepost.be/" data-phone="+32 9 298 06 01" data-mail="customercare@bubblepost.eu" data-groove-hq="true" data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div>
