--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ voertuigen.">
 
 <body id="tracy-body">
   <div class="warning">
-    <p>We are having some technical issues with our phone and internet connection, sorry for the inconvenience. We'll be right back!</p>
+    <p>We might have delays due to the strike of 29/09 in Brussels, our apologies!</p>
   </div>
 
   <!-- HTLM for tracy -->
