--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ voertuigen.">
 
 <body id="tracy-body">
   <div class="warning">
-    <p>We might have delays due to the strike of 29/09 in Brussels, our apologies!</p>
+    <p>WDue to today's nationional demonstration in Brussels, our deliveries in the capital may be disrupted. Thank you for your understanding.</p>
   </div>
 
   <!-- HTLM for tracy -->
