--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@ voertuigen.">
       position: fixed;
       top: 0px;
       width: 100%;
-      background: rgba(0, 0, 0, 0.4);
+      background: rgba(200, 75, 55, 0.8);
       color: white;
       text-align: center;
       margin-left: -10px;
@@ -82,7 +82,7 @@ voertuigen.">
 
 <body id="tracy-body">
   <div class="warning">
-    <p>Due to today's nationional demonstration in Brussels, our deliveries in the capital may be disrupted. Thank you for your understanding.</p>
+    <p>Due to today's (29/09) nationional demonstration in Brussels, our deliveries in the capital may be disrupted. Thank you for your understanding.</p>
   </div>
 
   <!-- HTLM for tracy -->
