--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ voertuigen.">
 
 <body id="tracy-body">
   <div class="warning">
-    <p>Due to today's (29/09) nationional demonstration in Brussels, our deliveries in the capital may be disrupted. Thank you for your understanding.</p>
+    <p>Due to today's (29/09) national demonstration in Brussels, our deliveries in the capital may be disrupted. Thank you for your understanding.</p>
   </div>
 
   <!-- HTLM for tracy -->
