--- a/index.html
+++ b/index.html
@@ -59,8 +59,21 @@ voertuigen.">
     }
   </style>
 
+  <!-- Hotjar Tracking Code for http://trackandtrace.bubblepost.be/ -->
+  <script>
+    (function(h,o,t,j,a,r){
+      h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
+      h._hjSettings={hjid:299641,hjsv:5};
+      a=o.getElementsByTagName('head')[0];
+      r=o.createElement('script');r.async=1;
+      r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
+      a.appendChild(r);
+    })(window,document,'//static.hotjar.com/c/hotjar-','.js?sv=');
+  </script>
+
   <!-- Bugsnag for Tracy -->
   <script src="//d2wy8f7a9ursnm.cloudfront.net/bugsnag-2.min.js" data-apikey="c80e974b8f35aaf763f7ef8d365e5db8"></script>
+
   <!-- Google Analytics for Tracy -->
   <script>
     (function(i, s, o, g, r, a, m) {
