changed banner to thursday

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ voertuigen.">
 
 <body id="tracy-body">
   <div class="warning">
-    <p>Due to today's national demonstration in Brussels, our deliveries in the capital may be disrupted. Thank you for your understanding.</p>
+    <p>Due to Thursday's (29/09) national demonstration in Brussels, our deliveries in the capital may be disrupted. Thank you for your understanding.</p>
   </div>
 
   <!-- HTLM for tracy -->
