--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@ voertuigen.">
 
 <body id="tracy-body">
   <div class="warning">
-    <p>Due to Thursday's (29/09) national demonstration in Brussels, our deliveries in the capital may be disrupted. Thank you for your understanding.</p>
-  </div>
+    <!-- <p>Due to Thursday's (29/09) national demonstration in Brussels, our deliveries in the capital may be disrupted. Thank you for your understanding.</p>
+  </div> -->
 
   <!-- HTLM for tracy -->
   <div id="tracy-container" data-url="https://app.bubblepost.be/" data-phone="+32 9 298 06 01" data-mail="customercare@bubblepost.eu" data-groove-hq="true" data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div>
