--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ voertuigen.">
 </head>
 
 <body id="tracy-body">
-  <div class="warning">
+  <!-- <div class="warning"> -->
     <!-- <p>Due to Thursday's (29/09) national demonstration in Brussels, our deliveries in the capital may be disrupted. Thank you for your understanding.</p>
   </div> -->
 
