--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ voertuigen.">
     } catch (e) {}
   </script>
   <style>
-    #tracy-container, #social-container {
+    /*#tracy-container, #social-container {
       margin-top: 70px;
     }
     .warning {
@@ -56,7 +56,7 @@ voertuigen.">
     }
     div#tracy-container div.tracy-language-box {
       top: 78px;
-    }
+    }*/
   </style>
 
   <!-- Hotjar Tracking Code for http://trackandtrace.bubblepost.be/ -->
