update url to api gateway

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ voertuigen.">
   </div> -->
 
   <!-- HTLM for tracy -->
-  <div id="tracy-container" data-url="https://app.bubblepost.be/" data-phone="+32 9 298 06 01" data-mail="customercare@bubblepost.eu" data-groove-hq="true" data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div>
+  <div id="tracy-container" data-url="https://rpythw81fl.execute-api.eu-west-1.amazonaws.com/PRODUCTION/" data-phone="+32 9 298 06 01" data-mail="customercare@bubblepost.eu" data-groove-hq="true" data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div>
 
   <div id="social-container">
     <a href="video-container" class="open-modal" name="modal">
