--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@ voertuigen.">
 </head>
 
 <body id="tracy-body">
-  <div class="warning"> -->
+  <div class="warning">
     <p>Our track&trace page was temporarily unavailable, but is fully up and running again. We apologize for any inconvenience. The Bubble Post team. (Oct 13, 2016)</p>
   </div>
 
