--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ voertuigen.">
     } catch (e) {}
   </script>
   <style>
-    #tracy-container, #social-container {
+    /*#tracy-container, #social-container {
       margin-top: 70px;
     }
     .warning {
@@ -56,7 +56,7 @@ voertuigen.">
     }
     div#tracy-container div.tracy-language-box {
       top: 78px;
-    }
+    }*/
   </style>
 
   <!-- Hotjar Tracking Code for http://trackandtrace.bubblepost.be/ -->
@@ -94,9 +94,9 @@ voertuigen.">
 </head>
 
 <body id="tracy-body">
-  <div class="warning">
+  <!-- <div class="warning">
     <p>Our track&trace page was temporarily unavailable, but is fully up and running again. We apologize for any inconvenience. The Bubble Post team. (Oct 13, 2016)</p>
-  </div>
+  </div> -->
 
   <!-- HTLM for tracy -->
   <div id="tracy-container" data-url="https://app.bubblepost.be/" data-phone="+32 9 298 06 01" data-mail="customercare@bubblepost.eu" data-groove-hq="true" data-background="img/bubble-background.jpg" data-logo="img/bubble.png"></div>
